@@ -2,6 +2,12 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2023-06-12:
+
+- Fixed a bug where ^X^E in emacs or 'v' in vi, which invoke a full-screen
+  editor to edit the command line, could cause the wrong command line to be
+  edited if two shell sessions share a .sh_history file.
+
 2023-06-10:
 
 - Ksh can now compile on most operating systems when using -std=c99 in CCFLAGS.
